24 Jul 2006; Roy Marples <uberlord@gentoo.org>

   Re-wrote buildmsg.c so that we only have 1 code block to actually make
   the message, making future expansion easier.

   Applied GNU styling to the entire code base, making it easier to read.

22 Jul 2006; Roy Marples <uberlord@gentoo.org>

   Accepted patch from Bert Van Leeuwen to not resolve our hostname
   unless we specifically ask to set it, Gentoo bug #141207.

21 Jul 2006; Roy Marples <uberlord@gentoo.org>

   Accepted patch from Bert Van Leeuwen to fix -v segfaulting
   on invalid options, Gentoo bug #141205.

*** dhcpcd-2.0.8 Released

04 Jul 2006; Roy Marples <uberlord@gentoo.org>

   Add patches from KIMURA Masaru which clean some minor errors,
   Gentoo bug #139179.

01 Jul 2006; Roy Marples <uberlord@gentoo.org>

   Hopefully fixed ARP checking by adding a timeout, Gentoo bug #137800.
   We also skip ARP checking if we have already been configured for the
   address we have or the interface not not ARPable.

   No longer report errors when adding routes that already exist.

   Indent our files better.

*** dhcpcd-2.0.7 Released

21 Jun 2006; Roy Marples <uberlord@gentoo.org>

   Always report exec errors when -c is used and increase arg count
   Gentoo bug #137478 thanks to JoseJX and lu_zero.
   
   Use a unsigned int instead of an int when comparing alarm time > 0.

   Fixed man page by putting the option -a against its description.

   Fixed segfault when using the -v option.

** dhcpcd-2.0.6 Released

02 Jun 2006; Roy Marples <uberlord@gentoo.org>

   Added a sleep of 2 seconds to dhcpBound so we don't gobble CPU time
   when there is loads of network traffic being passed around.

   Setup a siglongjmp for SIGTERM so we can execute external programs
   safely - like resolvconf -d.

   ARP is now inbuilt and the #ifdefs removed.
   New option -a disables the ARP check at runtime.

** dhcpcd-2.0.5 Released

21 Apr 2006; Roy Marples <uberlord@gentoo.org>
