@@ -135,9 +135,6 @@ is RFC2131 compliant unless this option is specified.
 .BI \-B
 Requests broadcast response from DHCP server.
 .TP
-.BI \-C
-Forces dhcpcd to calculate checksum on received packets.
-.TP
 .BI \-D
 Forces
 .B dhcpcd
